--- a/server/component-config.json
+++ b/server/component-config.json
@@ -1,10 +1,8 @@
 {
-  "loopback-component-explorer":
-  {
+  "loopback-component-explorer": {
     "mountPath": "/explorer",
     "uiDirs": "node_modules/iframe-resizer/js",
-    "apiInfo":
-    {
+    "apiInfo": {
       "title": "NotifyBC",
       "description": "A versatile notification API server",
       "license": "Apache 2.0",
