added pm2; get prod working

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       // "autoAttachChildProcesses": true,
       "preLaunchTask": "Clean and Compile Project",
       "env": {
-        "NODE_ENV": "dev"
+        "NODE_ENV": "prod"
       }
     }
   ]
