--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notify-bc",
   "version": "0.0.1",
-  "description": "A versatile notification API server",
+  "description": "a versatile notification API server",
   "main": "index.js",
   "authors": {
     "name": "Fred Wen",
