--- a/.github/workflows/ghPages.yml
+++ b/.github/workflows/ghPages.yml
@@ -1,5 +1,8 @@
 name: Publish to GH Pages
-on: [push]
+on:
+  push:
+    branches:
+      - main
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
