--- a/.github/workflows/ghPages.yml
+++ b/.github/workflows/ghPages.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+env:
+  notifyBCDocVersion_PATH: /
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -24,5 +26,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: docs/.vuepress/dist # The folder the action should deploy.
+          TARGET_FOLDER: ${{ env.notifyBCDocVersion_PATH }}
           CLEAN: true # Automatically remove deleted files from the deploy branch
           CLEAN_EXCLUDE: '["version"]'
