use Express application as the base

--- a/lb3app/server/config.json
+++ b/lb3app/server/config.json
@@ -5,6 +5,7 @@
   "remoting": {
     "rest": {
       "normalizeHttpPath": false,
+      "handleUnknownPaths": false,
       "xml": false,
       "handleErrors": false
     },
