--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,8 +17,7 @@
     {
       "label": "Clean and Compile Project",
       "type": "shell",
-      "command": "npm",
-      "args": ["--silent", "run", "cleanbuild"],
+      "command": "yarn --silent clean && yarn --silent build:serverOnly",
       "group": {
         "kind": "build",
         "isDefault": true
