--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "lb-tsc",
     "postbuild": "yarn --cwd public install && yarn --cwd public run build",
+    "build:serverOnly": "lb-tsc",
     "build:watch": "lb-tsc --watch",
     "lint": "npm run prettier:check && npm run eslint",
     "lint:fix": "npm run eslint:fix && npm run prettier:fix",
@@ -33,8 +34,7 @@
     "openapi-spec": "node ./dist/openapi-spec",
     "prestart": "npm run build",
     "start": "node .",
-    "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
-    "cleanbuild": "npm run clean && npm run build"
+    "clean": "lb-clean dist *.tsbuildinfo .eslintcache"
   },
   "repository": {
     "type": "git"
