migrated purgeData cron task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -21,6 +21,10 @@
       "group": {
         "kind": "build",
         "isDefault": true
+      },
+      "presentation": {
+        "reveal": "silent",
+        "clear": true
       }
     },
     {
