--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
     "Ntfctn",
     "addmeta",
     "addt",
+    "automigrate",
     "createsend",
     "feedparser",
     "getopt",
@@ -42,8 +43,10 @@
     "mailparser",
     "quickstart",
     "randexp",
+    "remoting",
     "serviceaccount",
     "smgov",
+    "testlab",
     "universalid",
     "unsub",
     "unsubscript",
