--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
     "postbuild": "yarn --cwd public install && yarn --cwd public run build",
     "build:serverOnly": "lb-tsc",
     "build:watch": "lb-tsc --watch",
-    "lint": "npm run prettier:check && npm run eslint",
-    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
+    "lint": "yarn prettier:check && yarn eslint",
+    "lint:fix": "yarn eslint:fix && yarn prettier:fix",
     "prettier:cli": "lb-prettier \"**/*.ts\" \"**/*.js\"",
-    "prettier:check": "npm run prettier:cli -- -l",
-    "prettier:fix": "npm run prettier:cli -- --write",
+    "prettier:check": "yarn prettier:cli -- -l",
+    "prettier:fix": "yarn prettier:cli -- --write",
     "eslint": "lb-eslint --report-unused-disable-directives .",
-    "eslint:fix": "npm run eslint -- --fix",
-    "pretest": "npm run clean && npm run build",
-    "test": "lb-mocha --allow-console-logs \"dist/__tests__\"",
-    "posttest": "npm run lint",
-    "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
+    "eslint:fix": "yarn eslint -- --fix",
+    "pretest": "yarn clean && yarn build",
+    "test": "lb-mocha --allow-console-logs --timeout 19999 dist/__tests__",
+    "posttest": "yarn lint",
+    "test:dev": "yarn clean && yarn build:serverOnly && lb-mocha --timeout 19999 --allow-console-logs dist/__tests__",
     "docker:build": "docker build -t notify-bc .",
     "docker:run": "docker run -p 3000:3000 -d notify-bc",
     "migrate": "node ./dist/migrate",
     "openapi-spec": "node ./dist/openapi-spec",
-    "prestart": "npm run build",
+    "prestart": "yarn build",
     "start": "node .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache"
   },
