--- a/server/models/configuration.json
+++ b/server/models/configuration.json
@@ -32,7 +32,7 @@
     "value": {
       "type": "any"
     },
-    "serivceName": {
+    "serviceName": {
       "type": "string"
     },
     "created": {
