--- a/.github/workflows/ghPages.yml
+++ b/.github/workflows/ghPages.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+  release:
+    types:
+      - published
 env:
   notifyBCDocVersion_PATH: /
   ALGOLIA_API_Key: ${{ secrets.ALGOLIA_API_Key }}
@@ -10,6 +13,10 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Update notifyBCDocVersion_PATH
+        if: ${{ startsWith(github.ref, 'refs/tags/') }}
+        run: echo notifyBCDocVersion_PATH=/version/$(echo $GITHUB_REF | cut -d / -f 3 | cut -d v -f 2- | cut -d . -f 1,2)/ >> $GITHUB_ENV
+
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
         with:
