--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "node": ">=14.5"
   },
   "scripts": {
-    "build": "lb-tsc",
+    "build": "yarn build:serverOnly",
     "postbuild": "yarn --cwd public install && yarn --cwd public run build",
-    "build:serverOnly": "lb-tsc",
+    "build:serverOnly": "lb-tsc && cp src/__tests__/acceptance/rss.xml dist/__tests__/acceptance",
     "build:watch": "lb-tsc --watch",
     "lint": "yarn prettier:check && yarn eslint",
     "lint:fix": "yarn eslint:fix && yarn prettier:fix",
