migrating subscription.acceptance.ts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,9 +50,11 @@
     "serviceaccount",
     "smgov",
     "testlab",
+    "undelete",
     "universalid",
     "unsub",
     "unsubscript",
+    "unsubscriptions",
     "userdisplayname",
     "yourprojectname"
   ]
