--- a/src/config.json
+++ b/src/config.json
@@ -26,6 +26,11 @@
     "name": "localhost"
   },
   "smsServiceProvider": "twilio",
+  "sms": {
+    "swift": {
+      "apiUrlPrefix": "https://secure.smsgateway.ca/services/message.svc/"
+    }
+  },
   "subscription": {
     "detectDuplicatedSubscription": false,
     "duplicatedSubscriptionNotification": {
@@ -70,7 +75,8 @@
           "email": {
             "from": "no_reply@invalid.local",
             "subject": "Un-subscription acknowledgement",
-            "textBody": "This is to acknowledge you have been un-subscribed from receiving notification for {unsubscription_service_names}. If you did not authorize this change or if you changed your mind, click {unsubscription_reversion_url} to revert."
+            "textBody": "This is to acknowledge you have been un-subscribed from receiving notification for {unsubscription_service_names}. If you did not authorize this change or if you changed your mind, open {unsubscription_reversion_url} to revert.",
+            "htmlBody": "This is to acknowledge you have been un-subscribed from receiving notification for {unsubscription_service_names}. If you did not authorize this change or if you changed your mind, click <a href=\"{unsubscription_reversion_url}\">here</a> to revert."
           }
         }
       }
