--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^7.0.5",
     "@loopback/boot": "^3.1.2",
     "@loopback/booter-lb3app": "^2.2.15",
     "@loopback/core": "^2.13.1",
