--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   ],
   "dependencies": {
     "@loopback/authentication": "^7.0.5",
+    "@loopback/authentication-jwt": "^0.7.5",
     "@loopback/boot": "^3.1.2",
     "@loopback/booter-lb3app": "^2.2.15",
     "@loopback/core": "^2.13.1",
@@ -60,6 +61,7 @@
     "@loopback/service-proxy": "^3.0.5",
     "async": "^3.0.1",
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "cron": "^1.2.1",
