--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
   ],
   "dependencies": {
     "@loopback/authentication": "^7.0.5",
-    "@loopback/authentication-jwt": "^0.7.5",
     "@loopback/boot": "^3.1.2",
     "@loopback/booter-lb3app": "^2.2.15",
     "@loopback/core": "^2.13.1",
@@ -66,6 +65,7 @@
     "cors": "^2.5.2",
     "cron": "^1.2.1",
     "cross-env": "^5.0.0",
+    "crypto-random-string": "^3.3.0",
     "csvtojson": "^1.1.7",
     "ejs": "^2.5.7",
     "feedparser": "^2.2.0",
@@ -96,6 +96,7 @@
     "@loopback/build": "^6.2.8",
     "@loopback/eslint-config": "^10.0.4",
     "@loopback/testlab": "^3.2.10",
+    "@types/bcryptjs": "^2.4.2",
     "@types/lodash": "^4.14.157",
     "@types/node": "^10.17.48",
     "connect-history-api-fallback": "^1.4.0",
