added code coverage

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "eslint": "lb-eslint --report-unused-disable-directives .",
     "eslint:fix": "yarn eslint -- --fix",
     "pretest": "yarn clean && yarn build",
-    "test": "lb-mocha --allow-console-logs --timeout 19999 dist/__tests__",
+    "test": "lb-nyc lb-mocha --allow-console-logs --timeout 19999 dist/__tests__",
     "posttest": "yarn lint",
-    "test:dev": "yarn clean && yarn build:serverOnly && lb-mocha --timeout 19999 --allow-console-logs dist/__tests__",
+    "test:dev": "yarn clean && yarn build:serverOnly && lb-nyc lb-mocha --timeout 19999 --allow-console-logs dist/__tests__",
     "docker:build": "docker build -t notify-bc .",
     "docker:run": "docker run -p 3000:3000 -d notify-bc",
     "migrate": "node ./dist/migrate",
