--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "yarn build:serverOnly",
     "postbuild": "yarn --cwd client install && yarn --cwd client run build",
     "postinstall": "yarn postbuild",
-    "build:serverOnly": "lb-tsc && cp src/__tests__/acceptance/rss.xml dist/__tests__/acceptance",
+    "build:serverOnly": "lb-tsc && cp src/__tests__/acceptance/rss.xml dist/__tests__/acceptance && cp src/templates/* node_modules/@loopback/rest-explorer/templates/",
     "build:watch": "lb-tsc --watch",
     "lint": "yarn prettier:check && yarn eslint",
     "lint:fix": "yarn eslint:fix && yarn prettier:fix",
