--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "lodash": "^4.17.20",
     "loopback-connector-mongodb": "^5.5.0",
     "mailparser": "^2.3.2",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
     "node-getopt": "^0.2.3",
     "node-rsa": "^0.4.1",
     "nodemailer": "^4.1.2",
@@ -96,6 +96,7 @@
     "@loopback/testlab": "^3.2.10",
     "@types/bcryptjs": "^2.4.2",
     "@types/lodash": "^4.14.157",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^10.17.48",
     "connect-history-api-fallback": "^1.4.0",
     "eslint": "^7.15.0",
