--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,7 +35,14 @@
       "cwd": "${workspaceFolder}/docs",
       "program": "node_modules/vuepress/cli.js",
       "args": ["dev"],
-      "console": "internalConsole"
+      "console": "internalConsole",
+      "envFile": "${workspaceFolder}/docs/.env"
+    }
+  ],
+  "compounds": [
+    {
+      "name": "App&Doc",
+      "configurations": ["App", "Doc"]
     }
   ]
 }
