--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
     "unsub",
     "unsubscript",
     "unsubscriptions",
+    "usercredential",
     "userdisplayname",
     "yourprojectname"
   ]
