--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "scripts": {
     "build": "yarn build:server",
     "build:server": "lb-tsc && cp src/__tests__/acceptance/rss.xml dist/__tests__/acceptance && cp src/templates/* node_modules/@loopback/rest-explorer/templates/",
-    "build:client": "yarn --cwd client install && yarn --cwd client run build",
+    "build:client": "yarn --cwd client run build",
     "build:docs": "yarn --cwd docs install && yarn --cwd docs run build",
     "build:watch": "lb-tsc --watch",
     "postbuild": "yarn build:client",
-    "postinstall": "yarn build",
+    "install:client": "yarn --cwd client install",
+    "postinstall": "yarn install:client",
     "lint": "yarn prettier:check && yarn eslint",
     "lint:fix": "yarn eslint:fix && yarn prettier:fix",
     "prettier:cli": "lb-prettier \"**/*.ts\" \"**/*.js\"",
