updated gh action

--- a/.github/workflows/ghPages.yml
+++ b/.github/workflows/ghPages.yml
@@ -3,12 +3,11 @@ on:
   push:
     branches:
       - main
-      - v2
   release:
     types:
       - published
 env:
-  notifyBCDocVersion_PATH: /version/2-beta/
+  notifyBCDocVersion_PATH: /
   ALGOLIA_API_Key: ${{ secrets.ALGOLIA_API_Key }}
 jobs:
   build-and-deploy:
@@ -37,3 +36,4 @@ jobs:
           FOLDER: docs/.vuepress/dist # The folder the action should deploy.
           TARGET_FOLDER: ${{ env.notifyBCDocVersion_PATH }}
           CLEAN: true # Automatically remove deleted files from the deploy branch
+          CLEAN_EXCLUDE: '["version"]'
