added missing packages

--- a/client-new/package.json
+++ b/client-new/package.json
@@ -21,12 +21,17 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^3.3.7",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jquery": "^3.5.0",
+    "jquery-ui-bundle": "^1.12.1",
+    "json-editor": "f-w/json-editor",
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
+    "summernote": "^0.8.8",
     "vue-cli-plugin-vuetify": "~2.1.0",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
