get home page rendered correctly

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -51,6 +51,10 @@
     {
       "name": "App&Doc",
       "configurations": ["App", "Doc"]
+    },
+    {
+      "name": "App&ClientNew",
+      "configurations": ["App", "Client-new"]
     }
   ]
 }
