--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,12 +46,14 @@
     "jmespath's",
     "lcov",
     "mailparser",
+    "materialdesignicons",
     "nonexpired",
     "preauthorize",
     "quickstart",
     "randexp",
     "remoting",
     "resizer",
+    "roboto",
     "serviceaccount",
     "signup",
     "smgov",
