--- a/client-new/package.json
+++ b/client-new/package.json
@@ -22,8 +22,10 @@
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^3.3.7",
+    "bootstrap-webpack": "0.0.6",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "imports-loader": "^0.7.1",
     "jquery": "^3.5.0",
     "jquery-ui-bundle": "^1.12.1",
     "json-editor": "f-w/json-editor",
@@ -31,6 +33,9 @@
     "less-loader": "^7.0.0",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
+    "style-loader": "^0.19.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^5.0.0",
     "summernote": "^0.8.8",
     "vue-cli-plugin-vuetify": "~2.1.0",
     "vue-template-compiler": "^2.6.11",
@@ -47,6 +52,9 @@
     ],
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+    "globals": {
+      "$": true
     },
     "rules": {}
   },
