--- a/client-new/package.json
+++ b/client-new/package.json
@@ -25,6 +25,7 @@
     "bootstrap-webpack": "0.0.6",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "html-loader": "^1.3.2",
     "imports-loader": "^0.7.1",
     "jquery": "^3.5.0",
     "jquery-ui-bundle": "^1.12.1",
