--- a/client/package.json
+++ b/client/package.json
@@ -1,87 +1,67 @@
 {
   "name": "notifybc-web-console",
-  "version": "1.0.0",
-  "description": "NotifyBC web console",
-  "author": "f-w <fred.wen@gov.bc.ca>",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "npm run dev",
-    "build": "node build/build.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "iframe-resizer": "^4.3.1",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "axios": "^0.19.0",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
     "bootstrap": "^3.3.7",
     "bootstrap-webpack": "0.0.6",
-    "chalk": "^2.0.1",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.1",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
-    "eventsource-polyfill": "^0.9.6",
-    "exports-loader": "^0.6.4",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "font-awesome": "^4.7.0",
-    "font-awesome-webpack": "0.0.5-beta.2",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.3",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "html-loader": "^1.3.2",
     "imports-loader": "^0.7.1",
-    "inject-loader": "^3.0.0",
     "jquery": "^3.5.0",
     "jquery-ui-bundle": "^1.12.1",
     "json-editor": "f-w/json-editor",
-    "less": "^3.1.0",
-    "less-loader": "^4.0.5",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "rimraf": "^2.6.0",
-    "script-loader": "^0.7.2",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "less": "^4.1.1",
+    "less-loader": "^7.0.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
     "style-loader": "^0.19.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^5.0.0",
     "summernote": "^0.8.8",
-    "url-loader": "^0.5.8",
-    "vue": "^2.5.1",
-    "vue-loader": "^14.0.0",
-    "vue-router": "^2.7.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
-    "vuetify": "^0.16.6",
-    "vuex": "^3.0.0",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0"
+    "vue-cli-plugin-vuetify": "~2.1.0",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "globals": {
+      "$": true
+    },
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
-  ],
-  "dependencies": {
-    "iframe-resizer": "^4.3.1"
-  }
+    "not dead"
+  ]
 }
