--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "iframe-resizer": "^4.3.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuetify": "^2.4.0",
-    "vuex": "^3.6.2"
+    "iframe-resizer": "^4.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -23,6 +18,7 @@
     "babel-eslint": "^10.1.0",
     "bootstrap": "^3.3.7",
     "bootstrap-webpack": "0.0.6",
+    "core-js": "^3.6.5",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "html-loader": "^1.3.2",
@@ -32,15 +28,20 @@
     "json-editor": "f-w/json-editor",
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
+    "lodash": "^4.17.20",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
     "style-loader": "^0.19.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^5.0.0",
     "summernote": "^0.8.8",
+    "vue": "^2.6.11",
     "vue-cli-plugin-vuetify": "~2.1.0",
+    "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vuetify": "^2.4.0",
+    "vuetify-loader": "^1.7.0",
+    "vuex": "^3.6.2"
   },
   "eslintConfig": {
     "root": true,
