--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "helmet": "^3.8.0",
     "ip-range-check": "0.0.2",
     "jmespath": "f-w/jmespath.js#semver:^1.0",
+    "js-base64": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "loopback-connector-mongodb": "^5.5.0",
     "mailparser": "^2.3.2",
