--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
     "lodash": "^4.17.20",
+    "oidc-client": "^1.11.4",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
     "style-loader": "^0.19.0",
