--- a/package.json
+++ b/package.json
@@ -107,10 +107,7 @@
     "eslint": "^7.18.0",
     "smtp-connection": "^4.0.2",
     "source-map-support": "^0.5.19",
-    "typescript": "~4.1.3",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.20.0"
+    "typescript": "~4.1.3"
   },
   "private": true
 }
