--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,8 @@
       "preLaunchTask": "Compile Project",
       "env": {
         "NODE_ENV": "dev",
-        "NOTIFYBC_WORKER_PROCESS_COUNT": "1"
+        "NOTIFYBC_WORKER_PROCESS_COUNT": "1",
+        "NODE_TLS_REJECT_UNAUTHORIZED": "0"
       }
     },
     {
