--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
   "eslint.nodePath": "./node_modules",
   "eslint.validate": ["javascript", "typescript"],
   "cSpell.words": [
+    "ECONNECTION",
     "IDAQAB",
     "NDRs",
     "createsend",
