added more resources to build pod

--- a/.openshift-templates/notify-bc-build.yml
+++ b/.openshift-templates/notify-bc-build.yml
@@ -18,8 +18,12 @@ objects:
       name: notify-bc
     spec:
       resources:
+        requests:
+          memory: 2Gi
+          cpu: '1'
         limits:
-          memory: 1Gi
+          memory: 2Gi
+          cpu: '1'
       output:
         to:
           kind: ImageStreamTag
