--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
     {
       "label": "Compile Project",
       "type": "shell",
-      "command": "yarn --silent build:server",
+      "command": "yarn --silent clean:server && yarn --silent build:server",
       "group": {
         "kind": "build",
         "isDefault": true
