--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@loopback/authentication": "^7.0.7",
     "@loopback/boot": "^3.2.1",
     "@loopback/core": "^2.14.1",
+    "@loopback/graphql": "^0.4.0",
     "@loopback/openapi-v3": "^5.1.4",
     "@loopback/repository": "^3.4.1",
     "@loopback/rest": "^9.1.3",
