--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "connect-history-api-fallback": "^1.4.0",
     "copyfiles": "^2.4.1",
     "eslint": "^7.18.0",
+    "nodemon": "^2.0.7",
     "smtp-connection": "^4.0.2",
     "source-map-support": "^0.5.19",
     "typescript": "~4.1.3"
