--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "async": "^3.0.1",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "bottleneck": "^2.19.5",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "cron": "^1.2.1",
@@ -87,6 +88,7 @@
     "nodemailer-direct-transport": "^3.3.2",
     "pluralize": "^7.0.0",
     "randexp": "^0.4.3",
+    "redis": "^3.1.2",
     "semver": "^5.3.0",
     "serve-favicon": "^2.5.0",
     "smtp-server": "^3.1.0",
