use sentinel and ioredis

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
     "getopt",
     "gsmtp",
     "hsts",
+    "ioredis",
     "jmespath",
     "jmespath's",
     "jwks",
@@ -53,6 +54,7 @@
     "letsencrypt",
     "mailparser",
     "materialdesignicons",
+    "mymaster",
     "nonexpired",
     "preauthorize",
     "quickstart",
