--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "ejs": "^2.5.7",
     "feedparser": "^2.2.0",
     "helmet": "^3.8.0",
+    "ioredis": "^4.27.6",
     "ip-range-check": "0.0.2",
     "jmespath": "f-w/jmespath.js#semver:^1.0",
     "js-base64": "^3.6.0",
@@ -88,7 +89,6 @@
     "nodemailer-direct-transport": "^3.3.2",
     "pluralize": "^7.0.0",
     "randexp": "^0.4.3",
-    "redis": "^3.1.2",
     "semver": "^5.3.0",
     "serve-favicon": "^2.5.0",
     "smtp-server": "^3.1.0",
