--- a/client/package.json
+++ b/client/package.json
@@ -3,59 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "iframe-resizer": "^4.3.1"
+    "@mdi/font": "7.0.96",
+    "core-js": "^3.29.0",
+    "iframe-resizer": "^4.3.1",
+    "roboto-fontface": "*",
+    "vue": "^3.2.0",
+    "vue-router": "^4.0.0",
+    "vuetify": "^3.0.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
+    "@vitejs/plugin-vue": "^3.0.3",
     "bootstrap": "^3.3.7",
-    "bootstrap-webpack": "0.0.6",
-    "core-js": "^3.6.5",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "html-loader": "^1.3.2",
-    "imports-loader": "^0.7.1",
+    "eslint": "^8.37.0",
+    "eslint-plugin-vue": "^9.3.0",
     "jquery": "^3.5.0",
     "jquery-ui-bundle": "^1.12.1",
     "json-editor": "f-w/json-editor",
     "less": "^4.1.1",
-    "less-loader": "^7.0.0",
     "lodash": "^4.17.21",
     "oidc-client": "^1.11.4",
-    "sass": "^1.32.0",
-    "sass-loader": "^10.0.0",
-    "style-loader": "^0.19.0",
+    "sass": "^1.60.0",
     "stylus": "^0.54.8",
-    "stylus-loader": "^5.0.0",
     "summernote": "^0.8.8",
-    "vue": "^2.6.11",
-    "vue-cli-plugin-vuetify": "~2.1.0",
-    "vue-router": "^3.2.0",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify": "^2.4.0",
-    "vuetify-loader": "^1.7.0",
+    "vite": "^4.2.0",
+    "vite-plugin-vuetify": "^1.0.0",
     "vuex": "^3.6.2"
   },
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "es2022": true
     },
     "extends": [
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
     "globals": {
       "$": true
     },
