--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,6 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch Client",
-      "request": "launch",
-      "type": "pwa-chrome",
-      "url": "http://localhost:8000",
-      "webRoot": "${workspaceFolder}/client/src"
-    },
-    {
       "name": "Launch Docs",
       "request": "launch",
       "type": "pwa-chrome",
@@ -25,6 +18,7 @@
       "runtimeExecutable": "yarn",
       "autoAttachChildProcesses": true,
       "runtimeArgs": ["run", "nodemon"],
+      "outputCapture": "std",
       "env": {
         "NODE_ENV": "dev",
         "NOTIFYBC_WORKER_PROCESS_COUNT": "1",
