--- a/.github/workflows/buildTestPublishContainerDeploy.yml
+++ b/.github/workflows/buildTestPublishContainerDeploy.yml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ vars.NODE_VERSION }}
       - name: Install and Test 🔧
         run: |
           yarn install
@@ -56,6 +59,7 @@ jobs:
         with:
           push: true
           tags: ghcr.io/bcgov/notify-bc:${{ env.notifyBCContainerTag }}
+          build-args: nodeVersion=${{ vars.NODE_VERSION }}
   deploy:
     if: ${{ github.repository == 'bcgov/NotifyBC' && startsWith(github.ref, 'refs/heads/') }}
     needs: publish-container
