--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notify-bc",
-  "version": "4.1.3",
+  "version": "4.1.4",
   "dbSchemaVersion": "0.8.0",
   "description": "A versatile notification API server",
   "keywords": [
@@ -10,7 +10,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "engines": {
-    "node": ">=10.16"
+    "node": ">=10.16 <17"
   },
   "scripts": {
     "build": "yarn build:server",
