--- a/client/package.json
+++ b/client/package.json
@@ -18,15 +18,15 @@
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@json-editor/json-editor": "^2.10.1",
     "@mdi/font": "7.0.96",
     "@rollup/plugin-inject": "^5.0.3",
     "@vitejs/plugin-vue": "^3.0.3",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.6.0",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.3.0",
     "jquery": "^3.5.0",
     "jquery-ui-bundle": "^1.12.1",
-    "json-editor": "f-w/json-editor",
     "less": "^4.1.1",
     "lodash": "^4.17.21",
     "oidc-client": "^1.11.4",
