--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^v5.15.4",
     "core-js": "^3.29.0",
     "iframe-resizer": "^4.3.1",
     "roboto-fontface": "*",
