--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@rollup/plugin-inject": "^5.0.3",
     "@vitejs/plugin-vue": "^3.0.3",
     "bootstrap": "^4.6.0",
+    "ejs": "^3.1.9",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.3.0",
     "fast-glob": "^3.3.0",
