--- a/docs/package.json
+++ b/docs/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "axios": "^1.4.0",
+    "less": "^4.1.3",
     "vitepress": "^1.0.0-beta.5"
   }
 }
