--- a/docs/package.json
+++ b/docs/package.json
@@ -10,7 +10,7 @@
   "repository": "https://github.com/bcgov/NotifyBC",
   "scripts": {
     "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
+    "build": "vitepress build",
     "docs:preview": "vitepress preview"
   },
   "license": "MIT",
