--- a/.github/workflows/ghPages.yml
+++ b/.github/workflows/ghPages.yml
@@ -8,7 +8,8 @@ on:
       - published
 env:
   notifyBCDocVersion_PATH: /
-  ALGOLIA_API_Key: ${{ secrets.ALGOLIA_API_Key }}
+  ALGOLIA_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
+  ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -37,7 +38,7 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: docs/.vuepress/dist # The folder the action should deploy.
+          FOLDER: docs/.vitepress/dist # The folder the action should deploy.
           TARGET_FOLDER: ${{ env.notifyBCDocVersion_PATH }}
           CLEAN: true # Automatically remove deleted files from the deploy branch
           CLEAN_EXCLUDE: '["version"]'
