--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@vuepress/plugin-docsearch": "^2.0.0-beta.66",
+    "@vuepress/plugin-theme-data": "^2.0.0-beta.66",
     "axios": "^1.4.0",
     "vuepress": "^2.0.0-beta.66"
   }
