--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@snippetors/vuepress-plugin-code-copy": "^1.2.3",
     "@vuepress/plugin-docsearch": "^2.0.0-beta.66",
     "axios": "^1.4.0",
     "vuepress": "^2.0.0-beta.66"
