--- a/.github/workflows/ghPages.yml
+++ b/.github/workflows/ghPages.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - node-18
   release:
     types:
       - published
@@ -14,14 +15,16 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Update notifyBCDocVersion_PATH
+      - name: Update notifyBCDocVersion_PATH for releases
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         run: echo notifyBCDocVersion_PATH=/version/$(echo $GITHUB_REF | cut -d / -f 3 | cut -d v -f 2- | cut -d . -f 1,2)/ >> $GITHUB_ENV
 
+      - name: Update notifyBCDocVersion_PATH for non-main branches
+        if: ${{ github.ref_type == 'branch' && github.ref_name != 'main'}}
+        run: echo notifyBCDocVersion_PATH=/preview/ >> $GITHUB_ENV
+
       - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
-        with:
-          persist-credentials: false
+        uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
         with:
@@ -38,7 +41,7 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: docs/.vitepress/dist # The folder the action should deploy.
+          FOLDER: docs/.vuepress/dist # The folder the action should deploy.
           TARGET_FOLDER: ${{ env.notifyBCDocVersion_PATH }}
           CLEAN: true # Automatically remove deleted files from the deploy branch
           CLEAN_EXCLUDE: '["version"]'
