--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,8 +30,8 @@
       "request": "launch",
       "name": "script",
       "runtimeExecutable": "ts-node",
-      "cwd": "${workspaceFolder}/src/utils/load-testing",
-      "args": ["bulk-post-subs.ts", "-n", "10", "foo@bar.com"],
+      "cwd": "${workspaceFolder}/src/observers",
+      "args": ["smtp-server.ts", "-b"],
       "outputCapture": "std"
     },
     {
