replace axios with fetch in bulk-import subscription

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,8 +30,8 @@
       "request": "launch",
       "name": "script",
       "runtimeExecutable": "ts-node",
-      "cwd": "${workspaceFolder}/src/observers",
-      "args": ["smtp-server.ts", "-b"],
+      "cwd": "${workspaceFolder}/src/utils/bulk-import",
+      "args": ["subscription.ts", "sample-subscription.csv"],
       "outputCapture": "std"
     },
     {
