--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "engines": {
-    "node": ">17"
+    "node": ">=18"
   },
   "scripts": {
     "build": "yarn build:server",
