--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "allowJs": true
+    "allowJs": true,
+    "lib": ["DOM"]
   },
   "include": ["src"]
 }
