--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "eslint": "^8.40.0",
     "nodemon": "^2.0.7",
     "source-map-support": "^0.5.21",
-    "typescript": "~4.9.5"
+    "typescript": "^5.1.6"
   },
   "private": true
 }
