--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "less": "^4.1.1",
     "lodash": "^4.17.21",
     "oidc-client": "^1.11.4",
+    "pinia": "^2.1.4",
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0",
     "vuex": "^4.0.2"
