run GH action for PR

--- a/.github/workflows/buildTestPublishContainerDeploy.yml
+++ b/.github/workflows/buildTestPublishContainerDeploy.yml
@@ -6,6 +6,7 @@ on:
   release:
     types:
       - published
+  pull_request:
   workflow_dispatch:
 env:
   notifyBCContainerTag: latest
@@ -25,7 +26,7 @@ jobs:
           yarn install
           yarn test
   publish-container:
-    if: ${{ github.repository == 'bcgov/NotifyBC' }}
+    if: ${{ github.repository == 'bcgov/NotifyBC' && github.event_name != 'pull_request' }}
     needs: build-and-test
     runs-on: ubuntu-latest
     steps:
@@ -61,7 +62,7 @@ jobs:
           tags: ghcr.io/bcgov/notify-bc:${{ env.notifyBCContainerTag }}
           build-args: nodeVersion=${{ vars.NODE_VERSION }}
   deploy:
-    if: ${{ github.repository == 'bcgov/NotifyBC' && startsWith(github.ref, 'refs/heads/') }}
+    if: ${{ github.repository == 'bcgov/NotifyBC' && github.event_name == 'push' }}
     needs: publish-container
     runs-on: ubuntu-latest
     steps:
