--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  // TODO: remove "notify-bc-lb" when the folder is deleted
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "notify-bc-lb"]
 }
